[package]
name = "htmls"
version = "0.1.0"
edition = "2024"
description = "这是一个用于解析html的库"
license = "Apache-2.0"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[lib]
crate-type = ["lib"]

[dependencies]
html5ever = "0.27.0"
logos = "0.15.0"
markup5ever_rcdom = "0.3.0"
regex = "1.11.1"
