[package]
name = "htmls"
author = "inkicchj"
version = "0.1.7"
edition = "2024"
description = "This is a library for parsing HTML and extracting HTML elements or text."
license = "Apache-2.0"
homepage = "https://github.com/inkicchj/htmls"
repository = "https://github.com/inkicchj/htmls"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[lib]
crate-type = ["lib"]

[dependencies]
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
regex = "1.11.1"